--- a/src/test/resources/myApp.properties
+++ b/src/test/resources/myApp.properties
@@ -3,6 +3,6 @@
 db.driverClass=com.mysql.cj.jdbc.Driver
 db.jdbcUrl=jdbc:mysql://localhost:3306/test
 db.username=User
-db.password=User
+db.password=Password
 
 
